# hotshot-primitives

./: .gitignore  CNAME  Cargo.toml  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml  update_nix.yml
benches/: advz.rs  minroot.rs
hotshot_primitives/: all.html  index.html  sidebar-items.js
hotshot_primitives/circuit/: index.html  sidebar-items.js
hotshot_primitives/circuit/qc_keyagg/: fn.compute_stake_table_hash.html  index.html  sidebar-items.js  struct.VerKeyVar.html  trait.QCKeyAggregateGadget.html  trait.VerKeyVar.html
hotshot_primitives/qc/: index.html  sidebar-items.js  trait.QuorumCertificate.html
hotshot_primitives/qc/bit_vector/: index.html  struct.BitVectorQC.html  struct.QCParams.html  struct.StakeTableEntry.html
hotshot_primitives/quorum_certificate/: index.html  sidebar-items.js  struct.BitvectorQuorumCertificate.html  struct.QCParams.html  struct.StakeTableDigest.html  struct.StakeTableEntry.html  trait.QuorumCertificateValidation.html
hotshot_primitives/stake_table/: enum.MerklePathEntry.html  enum.STVersion.html  enum.SnapshotVersion.html  index.html  sidebar-items.js  struct.EncodedPublicKey.html  struct.MerkleCommitment.html  struct.MerkleProof.html  struct.StakeTable.html  trait.StakeTableScheme.html  type.MerklePath.html
hotshot_primitives/stake_table/error/: enum.StakeTableError.html  index.html  sidebar-items.js
hotshot_primitives/stake_table/utils/: enum.MerklePathEntry.html  struct.MerkleCommitment.html  struct.MerkleProof.html  type.MerklePath.html
hotshot_primitives/vdf/: index.html  sidebar-items.js  trait.VDF.html
hotshot_primitives/vdf/minroot/: index.html  struct.MinRoot.html  struct.MinRootElement.html  struct.MinRootPP.html  trait.MinRootField.html
hotshot_primitives/vid/: enum.VidError.html  index.html  sidebar-items.js  trait.VidScheme.html  type.VidResult.html
hotshot_primitives/vid/advz/: index.html  sidebar-items.js  struct.Advz.html  struct.Common.html  struct.GenericAdvz.html  struct.Share.html  type.Advz.html
implementors/ark_serialize/: trait.CanonicalDeserialize.js  trait.CanonicalSerialize.js  trait.Valid.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/core/str/traits/: trait.FromStr.js
implementors/hotshot_primitives/vid/: trait.VidScheme.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/tagged_base64/: trait.Tagged.js
src/: lib.rs  qc.rs  quorum_certificate.rs
src/circuit/: mod.rs  qc_keyagg.rs  qc_keyagg_sw.rs  qc_keyagg_te.rs
src/hotshot_primitives/: lib.rs.html  quorum_certificate.rs.html
src/hotshot_primitives/circuit/: mod.rs.html  qc_keyagg.rs.html
src/hotshot_primitives/qc/: bit_vector.rs.html  mod.rs.html
src/hotshot_primitives/stake_table/: config.rs.html  error.rs.html  mod.rs.html  utils.rs.html
src/hotshot_primitives/vdf/: minroot.rs.html  mod.rs.html
src/hotshot_primitives/vid/: advz.rs.html  mod.rs.html
src/qc/: bit_vector.rs  mod.rs
src/stake_table/: config.rs  error.rs  mod.rs  transactions.rs  utils.rs
src/vdf/: minroot.rs  mod.rs
src/vid/: advz.rs  mod.rs
tests/: advz.rs  vid.rs
tests/util/: mod.rs
tests/vid/: mod.rs
