[package]
name = "hotshot-primitives"
version = "0.1.0"
edition = "2021"
authors = ["Espresso Systems <hello@espressosys.com>"]
license = "MIT"
rust-version = "1.64.0"
homepage = "https://github.com/EspressoSystems/hotshot-primitives"
repository = "https://github.com/EspressoSystems/hotshot-primitives"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-pallas = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
ethereum-types = { version = "0.14.1", features = ["impl-serde"] }
jf-primitives = { git = "https://github.com/espressosystems/jellyfish", tag = "0.3.0" }
jf-utils = { git = "https://github.com/espressosystems/jellyfish", tag = "0.3.0" }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
sha3 = "0.10.7"
tagged-base64 = { git = "https://github.com/espressosystems/tagged-base64", tag = "0.3.0" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "minroot"
harness = false

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-pallas/std", "ark-ff/std"]
parallel = ["jf-primitives/parallel", "jf-utils/parallel", "ark-ff/parallel"]
