[package]
name = "hotshot-primitives"
version = "0.1.0"
edition = "2021"
authors = ["Espresso Systems <hello@espressosys.com>"]
license = "MIT"
rust-version = "1.64.0"
homepage = "https://github.com/EspressoSystems/hotshot-primitives"
repository = "https://github.com/EspressoSystems/hotshot-primitives"

[dependencies]
anyhow = "1.0"
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-pallas = "0.4.0"
ark-poly = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", default-features = false }
bincode = { version = "1.1.3" }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc", "atomic", "serde"] }
derivative = "2.2.0"
digest = { version = "0.10" }
displaydoc = { version = "0.2.3", default-features = false }
ethereum-types = { version = "0.14.1", features = ["impl-serde"] }
generic-array = "0.14.7"
jf-primitives = { git = "https://github.com/espressosystems/jellyfish" }
jf-relation = { git = "https://github.com/espressosystems/jellyfish" }
jf-utils = { git = "https://github.com/espressosystems/jellyfish" }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
sha3 = "0.10.7"
tagged-base64 = { git = "https://github.com/espressosystems/tagged-base64", tag = "0.3.1" }
thiserror = "1.0"
typenum = { version = "1.16.0" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
jf-primitives = { git = "https://github.com/espressosystems/jellyfish", features = ["test-srs"] }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = { version = "0.10" }

[[bench]]
name = "minroot"
harness = false

[[bench]]
name = "advz"
harness = false

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-pallas/std", "ark-ff/std"]
parallel = ["jf-primitives/parallel", "jf-utils/parallel", "ark-ff/parallel"]
